[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
dirs = "4.0.0"
regex = "1.7.0"

